test/bad/loops/for07.px

for c in [0]... do
    skip
